# DSA104

./: README.md  main.py  pyproject.toml
assignments/assignment01/: 1A_Classification.ipynb  1B_Regression.ipynb  ames_data.csv  esol.csv  readme.md
assignments/assignment01/solutions/: 1A_Classification_solution.ipynb  1B_Regression_solution.ipynb  best_model.joblib
assignments/assignment02/: 2_Clustering.ipynb
assignments/assignment02/solutions/: 2_Clustering.ipynb
assignments/assignment03/: 3_OHE_toxicity.ipynb  readme.md
assignments/assignment03/solutions/: 3_OHE_toxicity.ipynb  readme.md  tdc_ld50_zhu.csv
assignments/assignment04/: 4_ClassificationNN.ipynb  readme.md
lectures/session01/material/: dht_data.csv  dht_prediction.ipynb
lectures/session02/material/: chemicals.csv  dht_prediction.ipynb  inventory.csv  pd-demo.ipynb  pd-puzzles.ipynb  wine_adapted.csv  wine_analysis.ipynb
lectures/session02/userfolder/: template.ipynb
lectures/session03/material/: KNN-penguins-decisionboundaries.ipynb  KNN-penguins.ipynb
lectures/session03/userfolder/: KNN-penguins-decisionboundaries.ipynb  KNN-penguins.ipynb
lectures/session04/material/: KNN-penguins.ipynb  RF-classification.ipynb  penguins_mystery.csv
lectures/session04/userfolder/: RF-classification.ipynb  template.ipynb  template.py
lectures/session05/material/: SVC_breastcancer.ipynb
lectures/session05/userfolder/: SVC_breastcancer.ipynb  template.ipynb
lectures/session06/material/: Clustering_ESOL.ipynb  SVC_breastcancer.ipynb  esol_modified.csv
(+18 files in other folders)
