[project]
name = "dsa104"
version = "0.1.0"
description = "Basic package for the course DSA104 AI and ML in Chemistry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.41",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.2.2",
    "umap-learn>=0.5.11",
]

[project.optional-dependencies]
cu126 = ["torch>=2.6.0", "torchvision>=0.21.0"]

[tool.uv]
conflicts = [
  [
    { extra = "cu126" },
    { extra = "cu130" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]